modificación de frase antes de firma y mejora en la graficación de la frase 'SENA Virtual'

--- a/horarioDefinido.html
+++ b/horarioDefinido.html
@@ -36,7 +36,7 @@
 	</script>
 	</div>
 
-	<h3>El computador es mi salon de clases y me comprometo a cumplir este horario para alcanzar mis metas personales.</h3>
+	<h3>El computador es el salon de clases y me comprometo a ingresar en este horario.</h3>
 	<h4> ______________________________</h3>
 	<h4>FIRMA</h4>
 
